--- a/lessons.html
+++ b/lessons.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="subpage">
   <header class="subpage-header">
     <nav class="navbar">
       <a href="index.html" class="back-btn">&larr; Home</a>
