--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="lessons.html">Lessons</a>
+        <div class="language-switcher">
+          <button data-lang="nl" class="lang-btn">NL</button>
+          <button data-lang="en" class="lang-btn">EN</button>
+        </div>
       </div>
     </nav>
     <div class="menu-overlay"></div>
