--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
         <a href="about.html">About</a>
         <a href="lessons.html">Lessons</a>
       </div>
+      <div class="language-switcher">
+        <button data-lang="nl" class="lang-btn">NL</button>
+        <button data-lang="en" class="lang-btn">EN</button>
+      </div>
     </nav>
     <h1>A Lifetime in Music</h1>
   </header>
