--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
     <div class="hero-content">
       <h1>Alicia Spelberg Muziekpraktijk</h1>
       <p>Music lessons for every age, every stage.</p>
-      <div class="scroll-indicator">Scroll</div>
     </div>
   </header>
 
   <main>
     <section class="about-preview">
       <h2>A Lifetime in Music</h2>
-      <img src="images/aliciaSelfie.png" alt="Alicia Spelberg portrait" class="about-img">
+      <div class="carousel about-carousel">
+        <img src="images/aliciaSelfie.png" alt="Alicia Spelberg portrait" class="about-img carousel-img active">
+        <img src="images/aliciaSelfie2.jpg" alt="Alicia playing looking at a violin" class="about-img carousel-img">
+        <img src="images/aliciaSelfie3.jpg" alt="Alicia portrait" class="about-img carousel-img">
+        <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
+      </div>
       <p class="about-text">Alicia Spelberg is an experienced music teacher offering violin and piano lessons to
         children and adults of all levels. With over 30 years of teaching experience and a background in performance and
         education, she gives each student personal attention and a structured, joyful approach. Lessons take place in
@@ -50,7 +54,12 @@
 
     <section class="lessons-preview">
       <h2>Personal music lessons with heart.</h2>
-      <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-img">
+      <div class="carousel lessons-carousel">
+        <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-img carousel-img active">
+        <img src="images/vrolijkelessen.jpg" alt="Student performance" class="lessons-img carousel-img">
+        <img src="images/muziekboeken.jpg" alt="Lesson setting" class="lessons-img carousel-img">
+        <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
+      </div>
       <p class="lessons-text">Alicia's lessons are known for their warm, personal approach. Every student receives
         individual attention, with lessons tailored to their needs, level, and musical taste. Whether learning solo or
         playing together in informal performances, pupils grow in a relaxed, structured setting where feeling good comes
@@ -79,6 +88,8 @@
       <p>Tel: +31 6 20233379</p>
       <p>Amstel 139, 1080EN, Amsterdam</p>
       <p>&copy; 2025 Muziekpraktijk Alicia Spelberg. KvK: 34372525</p>
+      <p>Lid Kunstenbond FNV</p>
+      <p>Website by <a href="https://lukaspelberg.nl" target="_blank">Luka Spelberg</a></p>
     </div>
   </footer>
   <script src="script.js"></script>
