--- a/lessons.html
+++ b/lessons.html
@@ -15,7 +15,6 @@
 <body class="subpage">
   <header class="subpage-header">
     <nav class="navbar">
-      <a href="index.html" class="back-btn">&larr; Home</a>
       <button class="menu-toggle" aria-label="Open menu">
         <span class="menu-icon"></span>
       </button>
@@ -34,7 +33,11 @@
   </header>
   <main>
     <section class="lessons-details">
-      <img src="images/lesruimte.png" alt="Lesson setting" class="lessons-detail-img">
+      <div class="carousel lessons-details-carousel">
+        <img src="images/lesruimte.png" alt="Lesson setting" class="lessons-detail-img carousel-img active">
+        <img src="images/pianoHands.jpg" alt="Close-up of hands playing piano" class="lessons-detail-img carousel-img">
+        <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
+      </div>
       <div class="lessons-detail-text">
         <p>Alicia's teaching can be defined by great personal attention to every pupil.
           At the same time she tries to connect them with each other on regular occasions every 6-8 weeks with
@@ -50,7 +53,11 @@
     </section>
     <section class="lessons-feelgood">
       <h2>“feel good” always goes first</h2>
-      <img src="images/optreden2.png" alt="optreden ouder en zoon" class="lessons-feelgood-img">
+      <div class="carousel lessons-feelgood-carousel">
+        <img src="images/optreden2.png" alt="optreden ouder en zoon" class="lessons-feelgood-img carousel-img active">
+        <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-feelgood-img carousel-img">
+        <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
+      </div>
       <p>Her teaching can further be defined by strong structure and coaching, always putting "feelgood" first. She can
         also teach in multiple languages and via online lessons.
         She offers lessons with lots of flexibility or lessons based on a year contract. This contract provides a
@@ -74,6 +81,8 @@
       <p>Tel: +31 6 20233379</p>
       <p>Amstel 139, 1080EN, Amsterdam</p>
       <p>&copy; 2025 Muziekpraktijk Alicia Spelberg. KvK: 34372525</p>
+      <p>Lid Kunstenbond FNV</p>
+      <p>Website by <a href="https://lukaspelberg.nl" target="_blank">Luka Spelberg</a></p>
     </div>
   </footer>
   <script src="script.js"></script>
