--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
       <h2>“Her philosophy to give them music for the whole life”</h2>
       <div class="carousel about3-carousel">
         <img src="images/leerlingOptreden.png" alt="Student performance" class="about3-img carousel-img active">
-        <img src="images/tekeningLes.jpg" alt="drawing of student in lesson" class="about3-img carousel-img">
+        <img src="images/optreden2.png" alt="mother and daughter performance" class="about3-img carousel-img">
         <img src="images/leerlingPiano.jpg" alt="student performance from top down." class="about3-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
       </div>
@@ -89,8 +89,9 @@
       <p>muziekpraktijk Alicia Spelberg</p>
       <p>Email: alicia_spelberg@hotmail.com</p>
       <p>Tel: +31 6 20233379</p>
-      <p>Amstel 139, 1080EN, Amsterdam</p>
-      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg. KvK: 34372525</p>
+      <p>Amstel 139, 1018EN, Amsterdam</p>
+      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg.</p>
+      <p>KvK: 34372525</p>
       <p>Lid Kunstenbond FNV</p>
       <p>Website by <a href="https://lukaspelberg.nl" target="_blank">Luka Spelberg</a></p>
     </div>
