--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <h2>Personal music lessons with heart.</h2>
       <div class="carousel lessons-carousel">
         <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-img carousel-img active">
+                <img src="images/mooiUitzicht.jpg" alt="spectacular view of the amstel from the lesson room" class="lessons-img carousel-img">
         <img src="images/vrolijkelessen.jpg" alt="Student performance" class="lessons-img carousel-img">
-        <img src="images/muziekboeken.jpg" alt="Lesson setting" class="lessons-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
       </div>
       <p class="lessons-text">Alicia's lessons are known for their warm, personal approach. Every student receives
@@ -86,8 +86,9 @@
       <p>muziekpraktijk Alicia Spelberg</p>
       <p>Email: alicia_spelberg@hotmail.com</p>
       <p>Tel: +31 6 20233379</p>
-      <p>Amstel 139, 1080EN, Amsterdam</p>
-      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg. KvK: 34372525</p>
+      <p>Amstel 139, 1018EN, Amsterdam</p>
+      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg.</p>
+      <p>KvK: 34372525</p>
       <p>Lid Kunstenbond FNV</p>
       <p>Website by <a href="https://lukaspelberg.nl" target="_blank">Luka Spelberg</a></p>
     </div>
