--- a/lessons.html
+++ b/lessons.html
@@ -36,6 +36,7 @@
       <div class="carousel lessons-details-carousel">
         <img src="images/lesruimte.png" alt="Lesson setting" class="lessons-detail-img carousel-img active">
         <img src="images/pianoHands.jpg" alt="Close-up of hands playing piano" class="lessons-detail-img carousel-img">
+        <img src="images/muziekboeken.jpg" alt="picture of music books." class="lessons-detail-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
       </div>
       <div class="lessons-detail-text">
@@ -54,7 +55,8 @@
     <section class="lessons-feelgood">
       <h2>“feel good” always goes first</h2>
       <div class="carousel lessons-feelgood-carousel">
-        <img src="images/optreden2.png" alt="optreden ouder en zoon" class="lessons-feelgood-img carousel-img active">
+        <img src="images/tekeningLes.jpg" alt="tekening in Les" class="lessons-feelgood-img carousel-img active">
+        <img src="images/vrolijkelessen.jpg" alt="Children in a lesson" class="lessons-feelgood-img carousel-img">
         <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-feelgood-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
       </div>
@@ -79,8 +81,9 @@
       <p>muziekpraktijk Alicia Spelberg</p>
       <p>Email: alicia_spelberg@hotmail.com</p>
       <p>Tel: +31 6 20233379</p>
-      <p>Amstel 139, 1080EN, Amsterdam</p>
-      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg. KvK: 34372525</p>
+      <p>Amstel 139, 1018EN, Amsterdam</p>
+      <p>&copy; 2025 Muziekpraktijk Alicia Spelberg.</p>
+      <p>KvK: 34372525</p>
       <p>Lid Kunstenbond FNV</p>
       <p>Website by <a href="https://lukaspelberg.nl" target="_blank">Luka Spelberg</a></p>
     </div>
