--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2>Personal music lessons with heart.</h2>
       <div class="carousel lessons-carousel">
         <img src="images/Leerlingen.png" alt="Children with instruments" class="lessons-img carousel-img active">
-                <img src="images/mooiUitzicht.jpg" alt="spectacular view of the amstel from the lesson room" class="lessons-img carousel-img">
+                <img src="images/amstelBanner.jpg" alt="spectacular view of the amstel from the lesson room" class="lessons-img carousel-img">
         <img src="images/vrolijkelessen.jpg" alt="Student performance" class="lessons-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
       </div>
