--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <meta name="description" content="Alicia Spelberg offers violin and piano lessons in Amsterdam for all ages and levels.">
+  <meta name="keywords" content="music lessons, violin, piano, Amsterdam, Alicia Spelberg, music teacher">
 </head>
 
 <body>
@@ -39,7 +42,7 @@
     <section class="about-preview">
       <h2>A Lifetime in Music</h2>
       <div class="carousel about-carousel">
-        <img src="images/aliciaSelfie.png" alt="Alicia Spelberg portrait" class="about-img carousel-img active">
+        <img src="images/aliciaSelfie.jpg" alt="Alicia Spelberg portrait" class="about-img carousel-img active">
         <img src="images/aliciaSelfie2.jpg" alt="Alicia playing looking at a violin" class="about-img carousel-img">
         <img src="images/aliciaSelfie3.jpg" alt="Alicia portrait" class="about-img carousel-img">
         <div class="carousel-progress"><div class="carousel-progress-bar"></div></div>
