--- a/lessons.html
+++ b/lessons.html
@@ -10,6 +10,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <meta name="description" content="Alicia Spelberg offers violin and piano lessons in Amsterdam for all ages and levels.">
+  <meta name="keywords" content="music lessons, violin, piano, Amsterdam, Alicia Spelberg, music teacher">
 </head>
 
 <body class="subpage">
